FIX position shape

--- a/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
@@ -1,3 +1,5 @@
-<div>
-  <button class="btn btn-default" (click)="this.mainEditorService.enterClassMode()">Diagramma delle Classi</button>
+<div class="container-fluid menu">
+  <div>
+    <button class="btn btn-default" (click)="this.mainEditorService.enterClassMode()">Diagramma delle Classi</button>
+  </div>
 </div>
