--- a/Front-End/src/app/components/editor/components/toolbar/toolbar.component.css
+++ b/Front-End/src/app/components/editor/components/toolbar/toolbar.component.css
@@ -106,6 +106,11 @@
   background-size:100%;
 }
 
+.addRettangoloAngolo {
+  background: url(imgs/Activity/RettangoloAngolo.svg) no-repeat;
+  background-size:100%;
+}
+
 /*Blocco di icone inizialmente settato a false*/
 .activity {
   /*display: none;*/
