Sistemato pulsantino commento sul class diagram

--- a/Front-End/src/app/components/editor/components/toolbar/toolbar.component.css
+++ b/Front-End/src/app/components/editor/components/toolbar/toolbar.component.css
@@ -52,7 +52,7 @@
 }
 
 .addCommento {
-    background: url(imgs/Classi/EsempioClasse.png) no-repeat top left;
+    background: url(imgs/Classi/Commento.svg) no-repeat top left;
     background-size: contain;
 }
 
