--- a/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid menu">
   <div>
-    <button class="btn btn-default" (click)="this.mainEditorService.enterClassMode()">Diagramma delle Classi</button>
+    <button class="btn btn-default" (click)="enterClassMode()">Diagramma delle Classi</button>
   </div>
 </div>
