roba varia per demo

--- a/Front-End/src/app/components/menu/components/file/file.component.html
+++ b/Front-End/src/app/components/menu/components/file/file.component.html
@@ -10,7 +10,7 @@
       <input id="upload" type="file" class="custom-file-input" (change)="importa($event)" placeholder="Upload file" accept=".json">
       <a href="#" onclick="$('input[id=upload]').click();">Importa progetto </a>
     </li>
-    <li><a href="#" >Genera codice</a></li>
+    <li><a href="#" (click)="genera()" >Genera codice</a></li>
     <li><a href="#" >Salva template</a></li>
     <li><a href="#" >Chiudi</a></li>
   </ul>
