--- a/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
@@ -1,20 +1,30 @@
-<div class="container-fluid menu">
+<div [hidden]="selemetedMethod" class="container-fluid menu">
+  <div class="row selezionato">
+    <span class="glyphicon glyphicon-wrench iconaMirrow" aria-hidden="true"></span>&nbsp;&nbsp;{{this.activityService.getNameMethod()}}
+  </div>
   <div class="row changeNome">
-    <label>Corpo operazione</label>
-    <input #corpo id="changeName"
-    (keyup.enter)="modBody(corpo.value)">
-    <button class="btn btn-default" (click)="modBody(corpo.value)">
+    Modifica nome:
+    <input #changeName id="changeName"
+    (keyup.enter)="changeNome(changeName.value)">
+    <button class="btn btn-default" (click)="changeNome(changeName.value)">
       <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
     </button>
   </div>
-  <div>
-    <button class="btn btn-default" (click)="enterClassMode()">
-      <span class="glyphicon glyphicon-arrow-left freccia"></span>
-      Diagramma delle Classi</button>
-  </div>
-  <div>
-    <button class="btn btn-default" (click)="generaCodice()">
-      <span class="glyphicon glyphicon-arrow-left freccia"></span>
-      CODE!</button>
+  <div [hidden]="!this.activityService.getSelectedElement()">
+    <div class="container-fluid menu">
+      <div class="row changeNome">
+        <label>Corpo operazione</label>
+        <input #corpo id="changeName"
+        (keyup.enter)="modBody(corpo.value)">
+        <button class="btn btn-default" (click)="modBody(corpo.value)">
+          <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+        </button>
+      </div>
+      <div>
+        <button class="btn btn-default" (click)="enterClassMode()">
+          <span class="glyphicon glyphicon-arrow-left freccia"></span>
+          Diagramma delle Classi</button>
+      </div>
+    </div>
   </div>
 </div>
