--- a/Back-End/templates/template.html
+++ b/Back-End/templates/template.html
@@ -17,7 +17,7 @@ Class {{name}}{
             }
         {{/methodsP}}  
     {{/private}}
-    {{#public}} public:
+    {{#public}}
         {{#attrPU}}
             {{typePU}} {{varPU}} {{#defPU}} = {{valuePU}} {{/defPU}};
         {{/attrPU}}
