--- a/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
+++ b/Front-End/src/app/components/editor/components/activity-menu/activity-menu.component.html
@@ -11,7 +11,7 @@
     </button>
   </div>
   <div [hidden]="!this.activityService.isOperation()">
-    <div class="container-fluid menu">
+    <div class="container-fluid">
       <div class="row changeNome">
         <label>Corpo operazione</label>
         <input #corpo id="changeName"
@@ -20,17 +20,12 @@
           <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
         </button>
       </div>
-      <div>
-        <button class="btn btn-default" (click)="enterClassMode()">
-          <span class="glyphicon glyphicon-arrow-left freccia"></span>
-          Diagramma delle Classi</button>
-      </div>
     </div>
   </div>
   <div [hidden]="!this.activityService.isDecision()">
-    <div class="container-fluid menu">
+    <div class="container-fluid">
       <div class="row changeNome">
-        <label>Tipo decisione</label>
+        <label>Tipo decisione</label><br />
         <select [(ngModel)]="dec">
           <option *ngFor="let dec of decisions" [value]="dec">{{ dec }}</option>
         </select>
@@ -51,5 +46,10 @@
         </button>
       </div>
     </div>
+  </div>
+  <div>
+    <button class="btn btn-default" (click)="enterClassMode()">
+      <span class="glyphicon glyphicon-arrow-left freccia"></span>
+      Diagramma delle Classi</button>
   </div>
 </div>
