aggiunti link a modifica password e modifica mail dal menu

--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
@@ -4,8 +4,8 @@
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li><a href="#" >Modifica password</a></li>
-    <li><a href="#" >Modifica email</a></li>
+    <li><a [routerLink]="['/modpsw']" >Modifica password</a></li>
+    <li><a [routerLink]="['/modemail']" >Modifica email</a></li>
     <li><a href="#" >Elimina profilo</a></li>
   </ul>
 </div>
