--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/mod-email/mod-email.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/components/mod-email/mod-email.component.html
@@ -1,24 +1,15 @@
-<div class="container">
-  <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4">
-    <div class="container-fluid">  
-      <span class="text hide glow"> Modifica Email </span>
-    </div> 
-    <div class="box">  
-      <h2>Login</h2>
-      <form name="form">
-        <div class="form-group">
-          <label for="username">Vecchia email:</label>
-          <input type="text" class="form-control" name="vemail" required />
-        </div>
-        <div class="form-group">
-          <label for="password">Nuova email:</label>
-          <input type="password" class="form-control" name="nemail" required />
-        </div>
-        <div class="form-group">
-          <button [routerLink]="['']" class="btn btn-primary">Modifica</button>
-          <a [routerLink]="['./Editor']" class="btn btn-link">Annulla</a>
-        </div>
-      </form>
-    </div>    
+<form name="form" class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4">
+  <h1>Modifica Email</h1>
+  <div class="form-group">
+    <label for="username">Nuova email:</label>
+    <input type="text" class="form-control" name="vemail" required />
   </div>
-</div>
+  <div class="form-group">
+    <label for="password">Conferma nuova email:</label>
+    <input type="text" class="form-control" name="nemail" required />
+  </div>
+  <div class="form-group">
+    <button [routerLink]="['/editor']" class="btn btn-primary">Modifica</button>
+    <a [routerLink]="['/editor']" class="btn btn-link">Annulla</a>
+  </div>
+</form>
