--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -1,27 +1,27 @@
-<div class="container">
-  <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4">
-    <div class="container-fluid">  
-      <span class="text hide glow"> SWEDesigner </span>
-      <img src="assets/images/logo.png" alt="logo" class="col-xs-6 logo" id="Trigger"/>
+ <div class="container col-xs-6 col-md-4">
+  <div class="sub-container">
+    <div class="row" id="a">      
+      <img src="assets/images/logo.png" alt="logo" class="col-xs-6" id="b"/>
+      <span id="content" class="text hide"> SWEDesigner </span>
     </div> 
     <div class="box">  
       <h2>Login</h2>
       <form name="form">
         <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" class="form-control" name="username" required />
-          <!-- <div class="help-block">Username is required</div> -->
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" required />
-          <!-- <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div> -->
-        </div>
-        <div class="form-group">
-          <button [routerLink]="['/editor']" class="btn btn-primary">Login</button>
-          <a [routerLink]="['/registrazione']" class="btn btn-link">Registrati</a>
-        </div>
-      </form>
-    </div>    
-  </div>
-</div>
+          <label for="email">Email</label>
+          <input type="text" class="form-control" name="email" required />
+          <!-- <div class="help-block">Email is required</div> -->
+           </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" name="password" required />
+              <!-- <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div> -->
+               </div>
+                <div class="form-group">
+                  <button [routerLink]="['/editor']" class="btn btn-primary">Login</button>
+                  <a [routerLink]="['/registration']" class="btn btn-link" (click)='refresh()'>Registrati</a>
+                </div>
+              </form>
+            </div>    
+          </div>
+        </div> 
