--- a/Front-End/src/app/components/editor-container/components/menu/menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class=".container-fluid barra-menu">
-  <div class="row">
-    <div class="logo">
+  <div class="rowEdit">
+    <div class="logoEdit">
       <img src="assets/images/logo.png" alt="logo">
       <div class="logoText">SWEDesigner</div>
     </div>
