--- a/Front-End/src/app/components/login/login.component.css
+++ b/Front-End/src/app/components/login/login.component.css
@@ -69,4 +69,5 @@ img {
     font-weight: 700;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgb(129,161,184);
+    margin-left: -35px;
 }   
