--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
  <div class="container col-xs-6 col-md-4">
   <div class="sub-container">
-    <div class="row" id="a">      
-      <img src="assets/images/logo.png" alt="logo" class="col-xs-6" id="b"/>
+    <div class="row" >      
+      <img src="assets/images/logo.png" alt="logo" class="col-xs-6" />
       <span id="content" class="text hide"> SWEDesigner </span>
     </div> 
     <div class="box">  
@@ -9,17 +9,18 @@
       <form name="form">
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="text" class="form-control" name="email" required />
+          <input type="email" class="form-control" name="email" required placeholder="Email"/>
           <!-- <div class="help-block">Email is required</div> -->
            </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" required />
+              <input type="password" class="form-control" name="password" required placeholder="Password"/>
               <!-- <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div> -->
                </div>
                 <div class="form-group">
                   <button [routerLink]="['/editor']" class="btn btn-primary">Login</button>
-                  <a [routerLink]="['/registration']" class="btn btn-link" (click)='refresh()'>Registrati</a>
+                  <a [routerLink]="['/registrazione']" class="btn btn-link" (click)='refresh()'>Registrati</a>
+                  <a [routerLink]="['/password dimenticata']" class="btn btn-link" (click)='refresh()'>Password dimenticata</a>
                 </div>
               </form>
             </div>    
