--- a/Front-End/src/app/components/registration/registration.component.html
+++ b/Front-End/src/app/components/registration/registration.component.html
@@ -1,29 +1,29 @@
-<div class="container">
-  <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4">
-    <div class="container-fluid">  
-      <div class="text"> SWEDesigner </div>
-      <img src="assets/images/logo.png" alt="logo" class="col-xs-6 logo"/>
+<div id="mainDiv" class="container col-xs-6 col-md-4">
+  <div class="sub-container">
+    <div class="row" >      
+      <img src="assets/images/logo.png" alt="logo" class="col-xs-6" />
+      <span class="text"> SWEDesigner </span>
     </div> 
-    <div class="box">  
+    <div>  
       <h2>Registrazione</h2>
       <form name="form">
         <div class="form-group">
           <label for="username">Username</label>
-          <input type="text" class="form-control" name="username" required />
-          <!-- <div class="help-block">Email is required</div> -->
+          <input type="text" class="form-control" name="username" required placeholder="Username"/>
+           <div class="help-block">Email is required</div> 
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="text" class="form-control" name="email" required />
+          <input type="email" class="form-control" name="email" required  placeholder="Email"/>
           <!-- <div class="help-block">Email is required</div> -->
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" name="password" required />
+          <input type="password" class="form-control" name="password" required placeholder="Password"/>
           <!-- <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div> -->
         </div>
         <div class="form-group">
-          <button [routerLink]="['/login']" class="btn btn-primary">Back</button>       
+          <button [routerLink]="['/login']" class="btn btn-primary" id="back" >Back</button>       
         </div>
       </form>
     </div>    
