--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -6,8 +6,8 @@
     </div> 
     <div class="box">  
       <h2>Login</h2>
-      <form name="form">
-        <div class="form-group">
+      <form name="form" (submit)="loginUser($event)">
+        <div class="form-group" >
           <label for="email">Email</label>
           <input type="email" class="form-control" name="email" required placeholder="Email"/>
           <!-- <div class="help-block">Email is required</div> -->
@@ -18,7 +18,8 @@
               <!-- <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div> -->
                </div>
                 <div class="form-group">
-                  <button [routerLink]="['/editor']" class="btn btn-primary">Login</button>
+                  <input type="submit" class="btn btn-primary" value="Login"/> 
+                  <!-- [routerLink]="['/editor']" -->
                   <a [routerLink]="['/registrazione']" class="btn btn-link" (click)='refresh()'>Registrati</a>
                   <a [routerLink]="['/password dimenticata']" class="btn btn-link" (click)='refresh()'>Password dimenticata</a>
                 </div>
