--- a/Front-End/src/app/components/registration/registration.component.html
+++ b/Front-End/src/app/components/registration/registration.component.html
@@ -10,7 +10,7 @@
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" class="form-control" name="username" required placeholder="Username"/>
-           <div class="help-block">Email is required</div> 
+           <div class="help-block bg-danger">Email is required</div> 
         </div>
         <div class="form-group">
           <label for="email">Email</label>
