ADD accountService a registrazione e forgot-psw

--- a/Front-End/src/app/components/registration/registration.component.css
+++ b/Front-End/src/app/components/registration/registration.component.css
@@ -30,3 +30,11 @@ img {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgb(129,161,184);
 }   
+
+#submit {
+    float: left;
+}
+
+#back {
+    float: right;
+}
