--- a/Front-End/src/app/components/forgot-psw/forgot-psw.component.html
+++ b/Front-End/src/app/components/forgot-psw/forgot-psw.component.html
@@ -7,7 +7,7 @@
     <div>  
       <h3>Password dimenticata</h3>
       <form name="form">
-        <div class="form-group">
+        <div class="form-group" (submit)="tryGetNewPassword($event)">
           <label for="email">Email</label>
           <input type="email" class="form-control" name="email" required placeholder="Email"/>
           <!-- <div class="help-block">Email is required</div> -->
@@ -16,8 +16,8 @@
 
         </div>
         <div class="form-group">
-          <button [routerLink]="['/login']" class="btn btn-primary" id="back" >Back</button> 
-          <button [routerLink]="['/login']" class="btn btn-primary" id="submit" >Invia</button>       
+          <input type="submit" class="btn btn-primary" value="Invia" id="submit"/>       
+          <button [routerLink]="['/home']" class="btn btn-primary" id="back" >Back</button> 
         </div>
       </form>
     </div>    
