--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -19,7 +19,7 @@
                </div>
                 <div class="form-group">
                   <input type="submit" class="btn btn-primary" value="Login"/> 
-                  <a [routerLink]="['/registrazione']" class="btn btn-link" (click)='refresh()'>Registrati</a>
+                  <a class="btn btn-link" (click)='redirSignUp()'>Registrati</a>
                   <a [routerLink]="['/password dimenticata']" class="btn btn-link" (click)='refresh()'>Password dimenticata</a>
                 </div>
               </form>
