Collegamento FE - BE Recupero pwd (p1)
COllegamento semplice server-client per recupero password

--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
                 <div class="form-group">
                   <input type="submit" class="btn btn-primary" value="Login"/> 
                   <a class="btn btn-link" (click)='redirSignUp()'>Registrati</a>
-                  <a [routerLink]="['/password dimenticata']" class="btn btn-link" (click)='refresh()'>Password dimenticata</a>
+                  <a class="btn btn-link" (click)='redirPwd()'>Password dimenticata</a>
                 </div>
               </form>
             </div>    
