--- a/Front-End/src/app/components/forgot-psw/forgot-psw.component.html
+++ b/Front-End/src/app/components/forgot-psw/forgot-psw.component.html
@@ -6,8 +6,8 @@
     </div> 
     <div>  
       <h3>Password dimenticata</h3>
-      <form name="form">
-        <div class="form-group" (submit)="tryGetNewPassword($event)">
+      <form name="form" (submit)="tryGetNewPassword($event)">
+        <div class="form-group">
           <label for="email">Email</label>
           <input type="email" class="form-control" name="email" required placeholder="Email"/>
           <!-- <div class="help-block">Email is required</div> -->
@@ -16,7 +16,7 @@
 
         </div>
         <div class="form-group">
-          <input type="submit" class="btn btn-primary" value="Invia" id="submit"/>       
+          <input type="submit" class="btn btn-primary" value="Invia"/>       
           <button [routerLink]="['/home']" class="btn btn-primary" id="back" >Back</button> 
         </div>
       </form>
