--- a/Front-End/src/app/components/login/login.component.css
+++ b/Front-End/src/app/components/login/login.component.css
@@ -59,15 +59,17 @@ img {
 .active {
     max-height: 100%;
     opacity: 1;
+    margin-top: -20px;
 }
 
 .text{
     font-family: 'Neuton', serif;
     color: rgb(238,117,0);
     color: rgb(255, 195, 76);
-    font-size: 35px;
+    font-size: 40px;
     font-weight: 700;
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: rgb(129,161,184);
-    margin-left: -35px;
+    opacity: .9;
+    margin-left: -30px;
 }   
