--- a/Front-End/src/app/components/login/login.component.html
+++ b/Front-End/src/app/components/login/login.component.html
@@ -5,24 +5,32 @@
       <span id="content" class="text hide"> SWEDesigner </span>
     </div> 
     <div class="box">  
-      <h2>Login</h2>
+      <h2 class="text-warning">Login</h2>
       <form name="form" (submit)="loginUser($event)">
-        <div class="form-group" >
-          <label for="email">Email</label>
-          <input type="email" class="form-control" name="email" required placeholder="Email"/>
-          <!-- <div class="help-block">Email is required</div> -->
-           </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" required placeholder="Password"/>
-              <!-- <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div> -->
-               </div>
-                <div class="form-group">
-                  <input type="submit" class="btn btn-primary" value="Login"/> 
-                  <a class="btn btn-link" (click)='redirSignUp()'>Registrati</a>
-                  <a class="btn btn-link" (click)='redirPwd()'>Password dimenticata</a>
-                </div>
-              </form>
-            </div>    
+        <div class="form-group has-warning" >
+          <label class="control-label" for="email"> Email </label>
+          <div class="input-group">
+            <span class="input-group-addon">
+              <i class="glyphicon glyphicon-envelope"></i>
+            </span>  
+            <input type="email" class="form-control" placeholder="Email"/>
           </div>
-        </div> 
+        </div>
+        <div class="form-group has-warning">
+          <label for="password" class="control-label">Password</label>
+          <div class="input-group">
+            <span class="input-group-addon">
+              <i class="glyphicon glyphicon-lock"></i>
+            </span> 
+            <input type="password" class="form-control" name="password" required placeholder="Password"/>
+          </div>
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btn btn-warning" value="Login"/> 
+          <a class="btn btn-link text-warning .warning	" (click)='accountService.redirectComponent("registrazione")'>Registrati</a>
+          <a class="btn btn-link text-warning" (click)='accountService.redirectComponent("passwordDimenticata")'>Password dimenticata</a>
+        </div>
+      </form>
+    </div>    
+  </div>
+</div> 
