--- a/Front-End/src/app/components/registration/registration.component.css
+++ b/Front-End/src/app/components/registration/registration.component.css
@@ -39,3 +39,11 @@ img {
 #back {
     float: right;
 }
+
+.ng-invalid:not(form)  {
+  border-right: 5px solid crimson; /* red */
+}
+
+.ng-valid[required], .ng-valid.required  {
+  border-right: 5px solid springgreen; /* green */
+}
