--- a/Front-End/src/app/components/login/login.component.css
+++ b/Front-End/src/app/components/login/login.component.css
@@ -65,10 +65,11 @@ img {
 .text{
     font-family: 'Neuton', serif;
     color: rgb(238,117,0);
-    color: rgb(255, 195, 76);
-    font-size: 40px;
-    font-weight: 700;
-    -webkit-text-stroke-width: 0.5px;
+    color: rgb(255, 195, 76); 
+    font-size: 50px;
+    line-height: 1;
+    font-weight: 400;
+    -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgb(129,161,184);
     opacity: .9;
     margin-left: -30px;
