HUGE COMMIT SEE DESCRIPTION
-aggiunto il “wellcome username”;
-funzione tmp che disabilita tutti i tasti quando si clicca il profilo, si dovrà cliccare sulla X per ripristinare i tasti;

--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
@@ -1,9 +1,10 @@
 <div class="dropdown" #menuProfilo>
-  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+  <button class="btn btn-default dropdown-toggle tmp-disable" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" 
+  id="menuProfilo">
     Profilo
     <span class="caret"></span>
   </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="menuProfiloToggle">
     <li><a [routerLink]="['/modifica password']" >Modifica password</a></li>
     <li><a [routerLink]="['/modifica email']" >Modifica email</a></li>
     <li><a href="#" >Elimina profilo</a></li>
