--- a/Front-End/src/app/components/editor-container/components/menu/components/template/template.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/template/template.component.html
@@ -1,5 +1,5 @@
 <div class="dropdown" #menuTemplate>
-  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+  <button class="btn btn-default dropdown-toggle tmp-disable" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     Template
     <span class="caret"></span>
   </button>
