--- a/Front-End/src/app/components/editor-container/components/menu/menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/menu.component.html
@@ -10,6 +10,6 @@
     <div class="menu btn">  <app-template></app-template>  </div>
     <div class="menu btn">  <app-layer></app-layer>  </div>
     <div class="menu btn">  <app-profilo></app-profilo>  </div>
-
+    <div class="wellcome"> <i class="glyphicon glyphicon-user"></i> &nbsp;: {{accountService.username}} </div>
   </div>
 </div>
