ADD alpha component manage profile
-aggiunta una gerarchia corretta di component necessari per la gestione del menù;
-aggiunto un menù a tendina del tutto embrionale che si apre e si chiude

--- a/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
+++ b/Front-End/src/app/components/editor-container/components/menu/components/profilo/profilo.component.html
@@ -1,12 +1,8 @@
-<div class="dropdown" #menuProfilo>
-  <button class="btn btn-default dropdown-toggle tmp-disable" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" 
-  id="menuProfilo">
+<div class="dropdown" #menuProfilo id="qwerty">
+  <button class="btn btn-default" data-toggle="collapse" id="menuProfilo" href="#manage-profile">
     Profilo
     <span class="caret"></span>
   </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="menuProfiloToggle">
-    <li><a [routerLink]="['/modifica password']" >Modifica password</a></li>
-    <li><a [routerLink]="['/modifica email']" >Modifica email</a></li>
-    <li><a href="#" >Elimina profilo</a></li>
-  </ul>
+  <div >
+  <app-manage-profile class="collapse" id="manage-profile"></app-manage-profile></div>
 </div>
